--- a/BERT_embeddings.ipynb
+++ b/BERT_embeddings.ipynb
@@ -204,18 +204,72 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'Max token whisper:'"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/plain": [
+              "390"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/plain": [
+              "'Max token wav2vec:'"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/plain": [
+              "420"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/plain": [
+              "'Max token google:'"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/plain": [
+              "390"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
       "source": [
         "\n",
         "def find_max_token (df):\n",
         "    max_len = 0\n",
-        "    transcripts = df['transcipts'].values\n",
+        "    transcripts = df['transcripts'].values\n",
         "\n",
         "    for transcript in transcripts:\n",
         "        input_ids = tokenizer.encode(transcript,add_special_tokens=True)\n",
-        "    \n",
         "        max_len = max(max_len,len(input_ids))\n",
         "    \n",
         "    return max_len\n",
@@ -229,6 +283,251 @@
         "display('Max token google:',max_len_google)\n",
         "\n",
         "    "
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "All fit within the max limit for 516 so we are okay. The max token will be set to 450 just incase there is any problem. \n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "184\n",
+            "186\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(len(tokenizer.tokenize(df_whisper.transcripts.values[10])))\n",
+        "print(len(tokenizer.encode_plus(df_whisper.transcripts.values[10])['input_ids']))"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "So the encoder doesn't split the transcript into sentences ...\n",
+        "\n",
+        "So to start off with I will generate embeddings for the WHOLE transcript"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Generate Tokens for the whole transcript"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "http://mccormickml.com/2019/07/22/BERT-fine-tuning/"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 29,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import torch\n",
+        "from torch.utils.data import TensorDataset, random_split\n",
+        "from torch.utils.data import DataLoader, RandomSampler, SequentialSampler"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Whisper \n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 24,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "transcripts = df_whisper.transcripts.values\n",
+        "labels = df_whisper.classification.values"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 27,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Original:   Yeah, in London you can go to Oxford Street, which is famous for shopping and there's self-aguse there and a lot of tourists come there and a lot there. So it's a good place to see when you come to London and there's Buckingham Palace where the Queen lives and that's a good place. That's the Royal Family lives so you can come there. And there's other, there's Big Ben, the houses of Parliament where the government, the government are, British government are. So that's a good place to go and there's the London Eye where you can see the whole of London, you go and you can see the whole of London. So that's a good place to visit in London. Yeah, so if I was, I would probably, I would go by public transport then you would see how London really is and you would see the whole of London if you go in a bus or the transport you would see how London is. So I would advice you go on public transport buses and trains so you would really enjoy it. You would get on a like an open tour bus where you can see the whole of London and go around and it doesn't cost that much. So yeah, that's good. Yeah, you can see more of London, yeah. Yeah, yeah. Okay then. Well.\n",
+            "Token IDs: tensor([  101,  3398,  1010,  1999,  2414,  2017,  2064,  2175,  2000,  4345,\n",
+            "         2395,  1010,  2029,  2003,  3297,  2005,  6023,  1998,  2045,  1005,\n",
+            "         1055,  2969,  1011, 12943,  8557,  2045,  1998,  1037,  2843,  1997,\n",
+            "         9045,  2272,  2045,  1998,  1037,  2843,  2045,  1012,  2061,  2009,\n",
+            "         1005,  1055,  1037,  2204,  2173,  2000,  2156,  2043,  2017,  2272,\n",
+            "         2000,  2414,  1998,  2045,  1005,  1055, 17836,  4186,  2073,  1996,\n",
+            "         3035,  3268,  1998,  2008,  1005,  1055,  1037,  2204,  2173,  1012,\n",
+            "         2008,  1005,  1055,  1996,  2548,  2155,  3268,  2061,  2017,  2064,\n",
+            "         2272,  2045,  1012,  1998,  2045,  1005,  1055,  2060,  1010,  2045,\n",
+            "         1005,  1055,  2502,  3841,  1010,  1996,  3506,  1997,  3323,  2073,\n",
+            "         1996,  2231,  1010,  1996,  2231,  2024,  1010,  2329,  2231,  2024,\n",
+            "         1012,  2061,  2008,  1005,  1055,  1037,  2204,  2173,  2000,  2175,\n",
+            "         1998,  2045,  1005,  1055,  1996,  2414,  3239,  2073,  2017,  2064,\n",
+            "         2156,  1996,  2878,  1997,  2414,  1010,  2017,  2175,  1998,  2017,\n",
+            "         2064,  2156,  1996,  2878,  1997,  2414,  1012,  2061,  2008,  1005,\n",
+            "         1055,  1037,  2204,  2173,  2000,  3942,  1999,  2414,  1012,  3398,\n",
+            "         1010,  2061,  2065,  1045,  2001,  1010,  1045,  2052,  2763,  1010,\n",
+            "         1045,  2052,  2175,  2011,  2270,  3665,  2059,  2017,  2052,  2156,\n",
+            "         2129,  2414,  2428,  2003,  1998,  2017,  2052,  2156,  1996,  2878,\n",
+            "         1997,  2414,  2065,  2017,  2175,  1999,  1037,  3902,  2030,  1996,\n",
+            "         3665,  2017,  2052,  2156,  2129,  2414,  2003,  1012,  2061,  1045,\n",
+            "         2052,  6040,  2017,  2175,  2006,  2270,  3665,  7793,  1998,  4499,\n",
+            "         2061,  2017,  2052,  2428,  5959,  2009,  1012,  2017,  2052,  2131,\n",
+            "         2006,  1037,  2066,  2019,  2330,  2778,  3902,  2073,  2017,  2064,\n",
+            "         2156,  1996,  2878,  1997,  2414,  1998,  2175,  2105,  1998,  2009,\n",
+            "         2987,  1005,  1056,  3465,  2008,  2172,  1012,  2061,  3398,  1010,\n",
+            "         2008,  1005,  1055,  2204,  1012,  3398,  1010,  2017,  2064,  2156,\n",
+            "         2062,  1997,  2414,  1010,  3398,  1012,  3398,  1010,  3398,  1012,\n",
+            "         3100,  2059,  1012,  2092,  1012,   102,     0,     0,     0,     0,\n",
+            "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+            "            0,     0,     0,     0,     0,     0,     0,     0,     0,     0])\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/var/folders/zx/41yyp8n50255b1fh_dg2stwr0000gn/T/ipykernel_16751/1411913810.py:30: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+            "  labels = torch.tensor(labels)\n"
+          ]
+        }
+      ],
+      "source": [
+        "input_ids = []\n",
+        "attention_masks = []\n",
+        "\n",
+        "for transcript in transcripts:\n",
+        "    # `encode_plus` will:\n",
+        "    #   (1) Tokenize the sentence.\n",
+        "    #   (2) Prepend the `[CLS]` token to the start.\n",
+        "    #   (3) Append the `[SEP]` token to the end.\n",
+        "    #   (4) Map tokens to their IDs.\n",
+        "    #   (5) Pad or truncate the sentence to `max_length`\n",
+        "    #   (6) Create attention masks for [PAD] tokens.\n",
+        "    encoded_dict = tokenizer.encode_plus(\n",
+        "                        transcript,                      # Sentence to encode.\n",
+        "                        add_special_tokens = True, # Add '[CLS]' and '[SEP]'\n",
+        "                        max_length = 450,           # Pad & truncate all sentences.\n",
+        "                        pad_to_max_length = True,\n",
+        "                        return_attention_mask = True,   # Construct attn. masks.\n",
+        "                        return_tensors = 'pt',     # Return pytorch tensors.\n",
+        "                   )\n",
+        "    \n",
+        "    # Add the encoded sentence to the list.    \n",
+        "    input_ids.append(encoded_dict['input_ids'])\n",
+        "    \n",
+        "    # And its attention mask (simply differentiates padding from non-padding).\n",
+        "    attention_masks.append(encoded_dict['attention_mask'])\n",
+        "\n",
+        "# Convert the lists into tensors.\n",
+        "input_ids = torch.cat(input_ids, dim=0)\n",
+        "attention_masks = torch.cat(attention_masks, dim=0)\n",
+        "labels = torch.tensor(labels)\n",
+        "\n",
+        "# Print sentence 0, now as a list of IDs.\n",
+        "print('Original: ', transcripts[0])\n",
+        "print('Token IDs:', input_ids[0])\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 28,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "   51 training samples\n",
+            "    6 validation samples\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Combine the training inputs into a TensorDataset.\n",
+        "dataset = TensorDataset(input_ids, attention_masks, labels)\n",
+        "\n",
+        "# Create a 90-10 train-validation split.\n",
+        "\n",
+        "# Calculate the number of samples to include in each set.\n",
+        "train_size = int(0.9 * len(dataset))\n",
+        "val_size = len(dataset) - train_size\n",
+        "\n",
+        "# Divide the dataset by randomly selecting samples.\n",
+        "train_dataset, val_dataset = random_split(dataset, [train_size, val_size])\n",
+        "\n",
+        "print('{:>5,} training samples'.format(train_size))\n",
+        "print('{:>5,} validation samples'.format(val_size))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 30,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from torch.utils.data import DataLoader, RandomSampler, SequentialSampler\n",
+        "\n",
+        "# The DataLoader needs to know our batch size for training, so we specify it \n",
+        "# here. For fine-tuning BERT on a specific task, the authors recommend a batch \n",
+        "# size of 16 or 32.\n",
+        "batch_size = 32\n",
+        "\n",
+        "# Create the DataLoaders for our training and validation sets.\n",
+        "# We'll take training samples in random order. \n",
+        "train_dataloader = DataLoader(\n",
+        "            train_dataset,  # The training samples.\n",
+        "            sampler = RandomSampler(train_dataset), # Select batches randomly\n",
+        "            batch_size = batch_size # Trains with this batch size.\n",
+        "        )\n",
+        "\n",
+        "# For validation the order doesn't matter, so we'll just read them sequentially.\n",
+        "validation_dataloader = DataLoader(\n",
+        "            val_dataset, # The validation samples.\n",
+        "            sampler = SequentialSampler(val_dataset), # Pull out batches sequentially.\n",
+        "            batch_size = batch_size # Evaluate with this batch size.\n",
+        "        )"
       ]
     }
   ],
